# bruce-fuda-bot

./: Cargo.toml  README.md  curfewAnnouncements.json  morningAnnouncements.json  todo.db
src/: main.rs
