[package]
name = "bruce-fuda-bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.71"
poise = "0.5.5"
shuttle-poise = "0.36.0"
shuttle-runtime = "0.36.0"
shuttle-secrets = "0.36.0"
tracing = "0.1.37"
tokio = "1.28.2"
chrono = "0.4.31"
rand = "0.8.5"
serde_json = "1.0.111"

